--- a/css/main.css
+++ b/css/main.css
@@ -1,90 +1,63 @@
-#theForm {
-	width: 300px;
-	height: 220px;
-	background-color: rgb(121, 164, 175);
-	border-radius: 10px;
-	position: absolute;
-	top: 30px;
-	margin-top: 5px;
+* {
+	box-sizing: border-box;
+	font-family: 'Adamina', serif;
 }
-#theForm label {
-	margin-left: 25px;
+@media only screen and (max-width: 680px) {
+	/*PHONES*/
 }
-#theForm input {
-	border: none;
-	width: 80%;
-	height: 25px;
-	margin: 4px 0;
-	border-radius: 3px;
-	border: 1px solid rgba(160, 160, 160, 0.726);
-	opacity: .8;
+
+@media only screen and (min-width: 768px) {
+	/*TABLETS*/
 }
-#theForm p {
-	width: 60%;
-	display: inline;
-	color: rgba(0, 0, 0, 0.658);
-	margin-left: 15px;
+
+@media only screen and (min-width: 1100px) {
+	/*LAPTOPS*/
 }
-#chk {
-	padding: 0;
-	margin: 0 !important;
-	border: none !important;
-	vertical-align: bottom;
-	margin-left: 10px !important;
-	width: 20px !important;
-	height: 20px !important;
+#theGrid {
+	width: 100%;
+	height: 1000px;
+	background-color: yellow;
 }
-#chkLabel {
-	display: block;
+#theHeader {
+	background-color: teal;
+	height: 170px;
+	width: 100%;
+	position: sticky;
 }
-#theForm button {
-	background-color: rgb(54, 108, 179);
-	color: white;
-	border: none;
-	border-radius: 3px;
-	height: 30px;
-	margin-left: 190px;
-	margin-top: 15px;
-	font-weight: bold;
-}
-#theForm button:hover {
-	background-color: rgb(61, 121, 199);
-}
-/****************************************/
-#bookContainer {
-	margin-top: 20px;
+.sticky {
+	position: fixed;
+	top: 0;
 	width: 100%;
 }
-.books {
-	width: 180px;
-	height: 250px;
-	box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.212);
-	border-bottom-left-radius: 10px;
-	border-bottom-right-radius: 10px;
-	float: left;
-	margin-right: 20px;
-	margin-bottom: 15px;
-}
-.books div {
-	background-color: rgb(155, 57, 57);
-	width: 100%;
-	height: 40%;
-}
-.books p {
-	font-size: 10px;
-	margin-left: 10px;
-	color: rgba(0, 0, 0, 0.753);
-}
-.remove {
-	background-color: orangered;
-	margin: 0;
-	padding: 0 8px;
-	color: white;
+#theHeader h1 {
 	font-weight: bold;
+	font-size: 35px;
+	text-align: center;
+}
+#theHeader button {
+	background-color: #e24c4a;
 	border: none;
 	border-radius: 4px;
-	margin-left: 60%;
+	width: 200px;
+	color: white;
+	font-weight: bold;
+	font-size: 30px;
+	text-transform: uppercase;
+	animation-name: addButton;
+	animation-duration: 5s;
+	animation-iteration-count: infinite;
+
+	/*controls button positioning*/
+	transform: translate(-50%, -50%);
+	top: 43%;
+	left: 50%;
+	position: absolute;
+	/*end of button positioning*/
 }
-.remove:hover {
-	background-color: rgb(189, 53, 3);
+@keyframes addButton {
+	0% {
+	}
+	50% {
+		background-color: #e9100d;
+	}
 }
