--- a/css/main.css
+++ b/css/main.css
@@ -35,7 +35,7 @@
 	text-align: center;
 }
 #theHeader button {
-	background-color: #e24c4a;
+	background-color: blue;
 	border: none;
 	border-radius: 4px;
 	width: 270px;
