--- a/css/main.css
+++ b/css/main.css
@@ -4,14 +4,89 @@
 }
 @media only screen and (max-width: 680px) {
 	/*PHONES*/
+	#theHeader h1 {
+		font-weight: bold;
+		font-size: 35px;
+		text-align: center;
+	}
+	#addBtn {
+		background-color: #e24c4a;
+		border: none;
+		border-radius: 4px;
+		width: 270px;
+		color: white;
+		font-weight: bold;
+		font-size: 30px;
+		text-transform: uppercase;
+		animation-name: addButton;
+		animation-duration: 5s;
+		animation-iteration-count: infinite;
+
+		/*controls button positioning*/
+		transform: translate(-50%, -30%);
+		top: 55%;
+		left: 50%;
+		position: absolute;
+		/*end of button positioning*/
+	}
 }
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 681px) {
 	/*TABLETS*/
+	#theHeader h1 {
+		font-weight: bold;
+		font-size: 35px;
+		text-align: center;
+	}
+	#addBtn {
+		background-color: #e24c4a;
+		border: none;
+		border-radius: 4px;
+		width: 250px;
+		color: white;
+		font-weight: bold;
+		font-size: 30px;
+		text-transform: uppercase;
+		animation-name: addButton;
+		animation-duration: 5s;
+		animation-iteration-count: infinite;
+
+		/*controls button positioning*/
+		transform: translate(-50%, -30%);
+		top: 55%;
+		left: 50%;
+		position: absolute;
+		/*end of button positioning*/
+	}
 }
 
 @media only screen and (min-width: 1100px) {
 	/*LAPTOPS*/
+	#theHeader h1 {
+		font-weight: bold;
+		font-size: 35px;
+		text-align: center;
+	}
+	#addBtn {
+		background-color: #e24c4a;
+		border: none;
+		border-radius: 4px;
+		width: 250px;
+		color: white;
+		font-weight: bold;
+		font-size: 30px;
+		text-transform: uppercase;
+		animation-name: addButton;
+		animation-duration: 5s;
+		animation-iteration-count: infinite;
+
+		/*controls button positioning*/
+		transform: translate(-50%, -30%);
+		top: 55%;
+		left: 50%;
+		position: absolute;
+		/*end of button positioning*/
+	}
 }
 #theGrid {
 	width: 100%;
@@ -20,7 +95,7 @@
 }
 #theHeader {
 	background-color: teal;
-	height: 170px;
+	height: 120px;
 	width: 100%;
 	position: sticky;
 }
@@ -29,35 +104,90 @@
 	top: 0;
 	width: 100%;
 }
-#theHeader h1 {
-	font-weight: bold;
-	font-size: 35px;
-	text-align: center;
-}
-#theHeader button {
-	background-color: #e24c4a;
-	border: none;
-	border-radius: 4px;
-	width: 250px;
-	color: white;
-	font-weight: bold;
-	font-size: 30px;
-	text-transform: uppercase;
-	animation-name: addButton;
-	animation-duration: 5s;
-	animation-iteration-count: infinite;
 
-	/*controls button positioning*/
-	transform: translate(-50%, -50%);
-	top: 43%;
-	left: 50%;
-	position: absolute;
-	/*end of button positioning*/
-}
 @keyframes addButton {
 	0% {
 	}
 	50% {
 		background-color: #e9100d;
 	}
+}
+/*FORM STYLING*/
+#theForm {
+	width: 100%;
+	margin-top: 71px;
+}
+.openedForm {
+	background-color: rgba(0, 0, 0, 0.774);
+	height: 380px; /*opened Form*/
+}
+.closedForm {
+	height: 5px;
+}
+form div {
+	height: 80px;
+	float: left;
+}
+#theAuthor {
+	/*TESTING COLORS WITH INPUTS*/
+	width: 100%;
+}
+#theTitle {
+	/*TESTING COLORS WITH INPUTS*/
+	width: 100%;
+}
+#theYear {
+	/*TESTING COLORS WITH INPUTS*/
+	width: 50%;
+}
+#thePages {
+	/*TESTING COLORS WITH INPUTS*/
+	width: 50%;
+}
+#theRead {
+	/*TESTING COLORS WITH INPUTS*/
+	float: left;
+	width: 100%;
+}
+#theForm label {
+	color: white;
+	width: 100%;
+	display: block;
+	font-size: 12px;
+	font-weight: bold;
+	margin-left: 10px;
+}
+#theAuthor input,
+#theTitle input,
+#theRead select {
+	width: 95% !important;
+	background-color: white;
+}
+#theForm input,
+#theRead select {
+	width: 90%;
+	margin-top: 3px;
+	padding: 10px;
+	border-radius: 4px;
+	border: none;
+	margin-left: 10px;
+}
+
+#submitDiv {
+	width: 100%;
+	height: 50px;
+}
+#submitBtn {
+	background-color: orangered;
+	color: white;
+	font-weight: bold;
+	border: none;
+	border-radius: 4px;
+	font-size: 20px;
+	width: 60%;
+	transform: translate(35%, 35%);
+	text-transform: uppercase;
+	animation-name: addButton;
+	animation-duration: 8s;
+	animation-iteration-count: infinite;
 }
