--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@
 		text-align: center;
 	}
 	#addBtn {
-		background-color: #e24c4a;
+		background-color: #e63936;
 		border: none;
 		border-radius: 4px;
 		width: 270px;
@@ -19,7 +19,7 @@
 		font-size: 30px;
 		text-transform: uppercase;
 		animation-name: addButton;
-		animation-duration: 5s;
+		animation-duration: 10s;
 		animation-iteration-count: infinite;
 
 		/*controls button positioning*/
@@ -29,9 +29,144 @@
 		position: absolute;
 		/*end of button positioning*/
 	}
+	/*FORM STYLING*/
+	#theForm {
+		width: 100%;
+		margin-top: 71px;
+	}
+	.openedForm {
+		background-color: rgba(0, 0, 0, 0.774);
+		height: 380px; /*opened Form*/
+		position: absolute;
+	}
+	.closedForm {
+		height: 0px;
+	}
+	form div {
+		height: 80px;
+		float: left;
+	}
+	#theAuthor {
+		/*TESTING COLORS WITH INPUTS*/
+		width: 100%;
+	}
+	#theTitle {
+		/*TESTING COLORS WITH INPUTS*/
+		width: 100%;
+	}
+	#theYear {
+		/*TESTING COLORS WITH INPUTS*/
+		width: 50%;
+	}
+	#thePages {
+		/*TESTING COLORS WITH INPUTS*/
+		width: 50%;
+	}
+	#theRead {
+		/*TESTING COLORS WITH INPUTS*/
+		float: left;
+		width: 100%;
+	}
+	#theForm label {
+		color: white;
+		width: 100%;
+		display: block;
+		font-size: 12px;
+		font-weight: bold;
+		margin-left: 10px;
+	}
+	#theAuthor input,
+	#theTitle input,
+	#theRead select {
+		width: 95% !important;
+		background-color: white;
+	}
+	#theForm input,
+	#theRead select {
+		width: 90%;
+		margin-top: 3px;
+		padding: 10px;
+		border-radius: 4px;
+		border: none;
+		margin-left: 10px;
+	}
+
+	#submitDiv {
+		width: 100%;
+		height: 50px;
+	}
+	#submitBtn {
+		background-color: orangered;
+		color: white;
+		font-weight: bold;
+		border: none;
+		border-radius: 4px;
+		font-size: 20px;
+		width: 60%;
+		transform: translate(35%, 35%);
+		text-transform: uppercase;
+		animation-name: addButton;
+		animation-duration: 8s;
+		animation-iteration-count: infinite;
+	}
+	.books {
+		width: 300px;
+		height: 450px;
+		margin: auto;
+		margin-top: 20px;
+		border-radius: 6px;
+		background-color: rgb(54, 27, 104);
+		position: relative;
+		z-index: 0;
+	}
+	.bookTitles {
+		padding-top: 40px;
+		text-align: center;
+		font-size: 40px;
+		font-weight: bolder;
+		color: white;
+	}
+	.bookAuthors {
+		text-align: center;
+		font-size: 15px;
+		color: white;
+	}
+	.bookPages {
+		padding-top: 10px;
+		text-align: center;
+		font-size: 11px;
+		text-decoration: overline underline;
+		color: white;
+	}
+	.bookFooters {
+		width: 100%;
+		height: 30px;
+		top: 0;
+		transform: translateY(1350%);
+		position: absolute;
+	}
+	.bookFooters h4 {
+		height: 100%;
+		width: 80%;
+		float: left;
+		padding-left: 10px;
+		color: white;
+	}
+	.bookfooters i {
+		display: block;
+		height: 100%;
+	}
+	.material-icons {
+		color: white !important;
+		opacity: .4 !important;
+	}
+	.material-icons:hover {
+		opacity: 1 !important;
+		transition-duration: 1s;
+	}
 }
 
-@media only screen and (min-width: 681px) {
+@media only screen and (min-width: 681px) and (orientation: portrait) {
 	/*TABLETS*/
 	#theHeader h1 {
 		font-weight: bold;
@@ -39,7 +174,7 @@
 		text-align: center;
 	}
 	#addBtn {
-		background-color: #e24c4a;
+		background-color: #e63936;
 		border: none;
 		border-radius: 4px;
 		width: 250px;
@@ -48,7 +183,7 @@
 		font-size: 30px;
 		text-transform: uppercase;
 		animation-name: addButton;
-		animation-duration: 5s;
+		animation-duration: 10s;
 		animation-iteration-count: infinite;
 
 		/*controls button positioning*/
@@ -57,6 +192,315 @@
 		left: 50%;
 		position: absolute;
 		/*end of button positioning*/
+	}
+	#theCatalog {
+		display: grid;
+		grid-template-columns: repeat(3, 1fr) !important;
+	}
+	/*FORM STYLING*/
+	#theForm {
+		width: 100%;
+		margin-top: 71px;
+	}
+	.openedForm {
+		background-color: rgba(0, 0, 0, 0.774);
+		height: 85px; /*opened Form*/
+		position: absolute;
+	}
+	.closedForm {
+		height: 0px;
+	}
+	form div {
+		height: 80px;
+		float: left;
+	}
+	#theAuthor {
+		/*TESTING COLORS WITH INPUTS*/
+		width: 30%;
+	}
+	#theTitle {
+		/*TESTING COLORS WITH INPUTS*/
+		width: 30%;
+	}
+	#theYear {
+		/*TESTING COLORS WITH INPUTS*/
+		width: 10%;
+	}
+	#thePages {
+		/*TESTING COLORS WITH INPUTS*/
+		width: 10%;
+	}
+	#theRead {
+		/*TESTING COLORS WITH INPUTS*/
+		float: left;
+		width: 10%;
+	}
+	#theForm label {
+		color: white;
+		width: 100%;
+		display: block;
+		font-size: 12px;
+		font-weight: bold;
+		margin-left: 4px;
+	}
+	#theAuthor input,
+	#theTitle input,
+	#theRead select {
+		width: 95% !important;
+		background-color: white;
+	}
+	#theForm input,
+	#theRead select {
+		width: 88%;
+		margin-top: 3px;
+		padding: 10px;
+		border-radius: 4px;
+		border: none;
+		margin-left: 4px;
+	}
+
+	#submitDiv {
+		width: 10%;
+	}
+	#submitBtn {
+		background-color: orangered;
+		color: white;
+		font-weight: bold;
+		border: none;
+		border-radius: 4px;
+		font-size: 13px;
+		transform: translate(6%, 41%);
+		width: 90%;
+		padding: 5px 0px;
+		text-transform: uppercase;
+		animation-name: addButton;
+		animation-duration: 8s;
+		animation-iteration-count: infinite;
+	}
+	.books {
+		width: 200px;
+		height: 300px;
+		margin: auto;
+		margin-top: 20px;
+		border-radius: 6px;
+		background-color: rgb(54, 27, 104);
+		position: relative;
+		z-index: 0;
+		float: left;
+	}
+	.bookTitles {
+		padding-top: 40px;
+		text-align: center;
+		font-size: 30px;
+		font-weight: bolder;
+		color: white;
+	}
+	.bookAuthors {
+		text-align: center;
+		font-size: 15px;
+		color: white;
+	}
+	.bookPages {
+		padding-top: 10px;
+		text-align: center;
+		font-size: 11px;
+		text-decoration: overline underline;
+		color: white;
+	}
+	.bookFooters {
+		width: 100%;
+		height: 30px;
+		top: 0;
+		transform: translateY(850%);
+		position: absolute;
+	}
+	.bookFooters h4 {
+		height: 100%;
+		width: 70%;
+		float: left;
+		padding-left: 10px;
+		color: white;
+	}
+	.bookfooters i {
+		display: block;
+		height: 100%;
+	}
+	.material-icons {
+		color: white !important;
+		opacity: .4 !important;
+	}
+	.material-icons:hover {
+		opacity: 1 !important;
+		transition-duration: 1s;
+	}
+}
+
+@media only screen and (min-width: 681px) and (orientation: landscape) {
+	/*TABLETS*/
+	#theHeader h1 {
+		font-weight: bold;
+		font-size: 35px;
+		text-align: center;
+	}
+	#addBtn {
+		background-color: #e63936;
+		border: none;
+		border-radius: 4px;
+		width: 250px;
+		color: white;
+		font-weight: bold;
+		font-size: 30px;
+		text-transform: uppercase;
+		animation-name: addButton;
+		animation-duration: 10s;
+		animation-iteration-count: infinite;
+
+		/*controls button positioning*/
+		transform: translate(-50%, -30%);
+		top: 55%;
+		left: 50%;
+		position: absolute;
+		/*end of button positioning*/
+	}
+	#theCatalog {
+		display: grid;
+		grid-template-columns: repeat(4, 1fr) !important;
+	}
+	/*FORM STYLING*/
+	#theForm {
+		width: 100%;
+		margin-top: 71px;
+	}
+	.openedForm {
+		background-color: rgba(0, 0, 0, 0.774);
+		height: 85px; /*opened Form*/
+		position: absolute;
+	}
+	.closedForm {
+		height: 0px;
+	}
+	form div {
+		height: 80px;
+		float: left;
+	}
+	#theAuthor {
+		/*TESTING COLORS WITH INPUTS*/
+		width: 30%;
+	}
+	#theTitle {
+		/*TESTING COLORS WITH INPUTS*/
+		width: 30%;
+	}
+	#theYear {
+		/*TESTING COLORS WITH INPUTS*/
+		width: 10%;
+	}
+	#thePages {
+		/*TESTING COLORS WITH INPUTS*/
+		width: 10%;
+	}
+	#theRead {
+		/*TESTING COLORS WITH INPUTS*/
+		float: left;
+		width: 10%;
+	}
+	#theForm label {
+		color: white;
+		width: 100%;
+		display: block;
+		font-size: 12px;
+		font-weight: bold;
+		margin-left: 4px;
+	}
+	#theAuthor input,
+	#theTitle input,
+	#theRead select {
+		width: 95% !important;
+		background-color: white;
+	}
+	#theForm input,
+	#theRead select {
+		width: 88%;
+		margin-top: 3px;
+		padding: 10px;
+		border-radius: 4px;
+		border: none;
+		margin-left: 4px;
+	}
+
+	#submitDiv {
+		width: 10%;
+	}
+	#submitBtn {
+		background-color: orangered;
+		color: white;
+		font-weight: bold;
+		border: none;
+		border-radius: 4px;
+		font-size: 13px;
+		transform: translate(6%, 41%);
+		width: 90%;
+		padding: 5px 0px;
+		text-transform: uppercase;
+		animation-name: addButton;
+		animation-duration: 8s;
+		animation-iteration-count: infinite;
+	}
+	.books {
+		width: 200px;
+		height: 300px;
+		margin: auto;
+		margin-top: 20px;
+		border-radius: 6px;
+		background-color: rgb(54, 27, 104);
+		position: relative;
+		z-index: 0;
+		float: left;
+	}
+	.bookTitles {
+		padding-top: 40px;
+		text-align: center;
+		font-size: 30px;
+		font-weight: bolder;
+		color: white;
+	}
+	.bookAuthors {
+		text-align: center;
+		font-size: 15px;
+		color: white;
+	}
+	.bookPages {
+		padding-top: 10px;
+		text-align: center;
+		font-size: 11px;
+		text-decoration: overline underline;
+		color: white;
+	}
+	.bookFooters {
+		width: 100%;
+		height: 30px;
+		top: 0;
+		transform: translateY(850%);
+		position: absolute;
+	}
+	.bookFooters h4 {
+		height: 100%;
+		width: 70%;
+		float: left;
+		padding-left: 10px;
+		color: white;
+	}
+	.bookfooters i {
+		display: block;
+		height: 100%;
+	}
+	.material-icons {
+		color: white !important;
+		opacity: .4 !important;
+	}
+	.material-icons:hover {
+		opacity: 1 !important;
+		transition-duration: 1s;
 	}
 }
 
@@ -87,107 +531,168 @@
 		position: absolute;
 		/*end of button positioning*/
 	}
+	#theCatalog {
+		display: grid;
+		grid-template-columns: repeat(5, 1fr) !important;
+	}
+	/*FORM STYLING*/
+	#theForm {
+		width: 100%;
+		margin-top: 71px;
+	}
+	.openedForm {
+		background-color: rgba(0, 0, 0, 0.774);
+		height: 85px; /*opened Form*/
+		position: absolute;
+	}
+	.closedForm {
+		height: 0px;
+	}
+	form div {
+		height: 80px;
+		float: left;
+	}
+	#theAuthor {
+		/*TESTING COLORS WITH INPUTS*/
+		width: 30%;
+	}
+	#theTitle {
+		/*TESTING COLORS WITH INPUTS*/
+		width: 30%;
+	}
+	#theYear {
+		/*TESTING COLORS WITH INPUTS*/
+		width: 10%;
+	}
+	#thePages {
+		/*TESTING COLORS WITH INPUTS*/
+		width: 10%;
+	}
+	#theRead {
+		/*TESTING COLORS WITH INPUTS*/
+		float: left;
+		width: 10%;
+	}
+	#theForm label {
+		color: white;
+		width: 100%;
+		display: block;
+		font-size: 12px;
+		font-weight: bold;
+		margin-left: 4px;
+	}
+	#theAuthor input,
+	#theTitle input,
+	#theRead select {
+		width: 95% !important;
+		background-color: white;
+	}
+	#theForm input,
+	#theRead select {
+		width: 88%;
+		margin-top: 3px;
+		padding: 10px;
+		border-radius: 4px;
+		border: none;
+		margin-left: 4px;
+	}
+
+	#submitDiv {
+		width: 10%;
+	}
+	#submitBtn {
+		background-color: orangered;
+		color: white;
+		font-weight: bold;
+		border: none;
+		border-radius: 4px;
+		font-size: 17px;
+		transform: translate(6%, 35%);
+		width: 90%;
+		padding: 0px 0px;
+		text-transform: uppercase;
+		animation-name: addButton;
+		animation-duration: 8s;
+		animation-iteration-count: infinite;
+	}
+	.books {
+		width: 200px;
+		height: 300px;
+		margin: auto;
+		margin-top: 20px;
+		border-radius: 6px;
+		background-color: rgb(54, 27, 104);
+		position: relative;
+		z-index: 0;
+		float: left;
+	}
+	.bookTitles {
+		padding-top: 40px;
+		text-align: center;
+		font-size: 30px;
+		font-weight: bolder;
+		color: white;
+	}
+	.bookAuthors {
+		text-align: center;
+		font-size: 15px;
+		color: white;
+	}
+	.bookPages {
+		padding-top: 10px;
+		text-align: center;
+		font-size: 11px;
+		text-decoration: overline underline;
+		color: white;
+	}
+	.bookFooters {
+		width: 100%;
+		height: 30px;
+		top: 0;
+		transform: translateY(850%);
+		position: absolute;
+	}
+	.bookFooters h4 {
+		height: 100%;
+		width: 70%;
+		float: left;
+		padding-left: 10px;
+		color: white;
+	}
+	.bookfooters i {
+		display: block;
+		height: 100%;
+	}
+	.material-icons {
+		color: white !important;
+		opacity: .4 !important;
+	}
+	.material-icons:hover {
+		opacity: 1 !important;
+		transition-duration: 1s;
+	}
 }
 #theGrid {
 	width: 100%;
 	height: 1900px;
-	background-color: yellow;
+	background-color: purple;
 }
 #theHeader {
 	background-color: teal;
 	height: 120px;
 	width: 100%;
 	position: sticky;
+	z-index: 4;
 }
 .sticky {
 	position: fixed;
 	top: 0;
 	width: 100%;
 }
-
 @keyframes addButton {
 	0% {
 	}
 	50% {
 		background-color: #e9100d;
 	}
-}
-/*FORM STYLING*/
-#theForm {
-	width: 100%;
-	margin-top: 71px;
-}
-.openedForm {
-	background-color: rgba(0, 0, 0, 0.774);
-	height: 380px; /*opened Form*/
-}
-.closedForm {
-	height: 5px;
-}
-form div {
-	height: 80px;
-	float: left;
-}
-#theAuthor {
-	/*TESTING COLORS WITH INPUTS*/
-	width: 100%;
-}
-#theTitle {
-	/*TESTING COLORS WITH INPUTS*/
-	width: 100%;
-}
-#theYear {
-	/*TESTING COLORS WITH INPUTS*/
-	width: 50%;
-}
-#thePages {
-	/*TESTING COLORS WITH INPUTS*/
-	width: 50%;
-}
-#theRead {
-	/*TESTING COLORS WITH INPUTS*/
-	float: left;
-	width: 100%;
-}
-#theForm label {
-	color: white;
-	width: 100%;
-	display: block;
-	font-size: 12px;
-	font-weight: bold;
-	margin-left: 10px;
-}
-#theAuthor input,
-#theTitle input,
-#theRead select {
-	width: 95% !important;
-	background-color: white;
-}
-#theForm input,
-#theRead select {
-	width: 90%;
-	margin-top: 3px;
-	padding: 10px;
-	border-radius: 4px;
-	border: none;
-	margin-left: 10px;
-}
-
-#submitDiv {
-	width: 100%;
-	height: 50px;
-}
-#submitBtn {
-	background-color: orangered;
-	color: white;
-	font-weight: bold;
-	border: none;
-	border-radius: 4px;
-	font-size: 20px;
-	width: 60%;
-	transform: translate(35%, 35%);
-	text-transform: uppercase;
-	animation-name: addButton;
-	animation-duration: 8s;
-	animation-iteration-count: infinite;
 }
