--- a/css/main.css
+++ b/css/main.css
@@ -115,7 +115,6 @@
 		margin: auto;
 		margin-top: 20px;
 		border-radius: 6px;
-		background-color: rgb(54, 27, 104);
 		position: relative;
 		z-index: 0;
 	}
@@ -135,8 +134,9 @@
 		padding-top: 10px;
 		text-align: center;
 		font-size: 11px;
-		text-decoration: overline underline;
 		color: white;
+		opacity: .6 !important;
+		text-decoration: none;
 	}
 	.bookFooters {
 		width: 100%;
@@ -168,6 +168,9 @@
 
 @media only screen and (min-width: 681px) and (orientation: portrait) {
 	/*TABLETS*/
+	#theGrid {
+		min-height: 1024px;
+	}
 	#theHeader h1 {
 		font-weight: bold;
 		font-size: 35px;
@@ -203,7 +206,6 @@
 		margin-top: 71px;
 	}
 	.openedForm {
-		background-color: rgba(0, 0, 0, 0.774);
 		height: 85px; /*opened Form*/
 		position: absolute;
 	}
@@ -283,7 +285,6 @@
 		margin: auto;
 		margin-top: 20px;
 		border-radius: 6px;
-		background-color: rgb(54, 27, 104);
 		position: relative;
 		z-index: 0;
 		float: left;
@@ -304,8 +305,9 @@
 		padding-top: 10px;
 		text-align: center;
 		font-size: 11px;
-		text-decoration: overline underline;
 		color: white;
+		opacity: .6 !important;
+		text-decoration: none;
 	}
 	.bookFooters {
 		width: 100%;
@@ -337,6 +339,9 @@
 
 @media only screen and (min-width: 681px) and (orientation: landscape) {
 	/*TABLETS*/
+	#theGrid {
+		min-height: 900px;
+	}
 	#theHeader h1 {
 		font-weight: bold;
 		font-size: 35px;
@@ -372,7 +377,6 @@
 		margin-top: 71px;
 	}
 	.openedForm {
-		background-color: rgba(0, 0, 0, 0.774);
 		height: 85px; /*opened Form*/
 		position: absolute;
 	}
@@ -452,7 +456,6 @@
 		margin: auto;
 		margin-top: 20px;
 		border-radius: 6px;
-		background-color: rgb(54, 27, 104);
 		position: relative;
 		z-index: 0;
 		float: left;
@@ -473,8 +476,9 @@
 		padding-top: 10px;
 		text-align: center;
 		font-size: 11px;
-		text-decoration: overline underline;
 		color: white;
+		opacity: .6 !important;
+		text-decoration: none;
 	}
 	.bookFooters {
 		width: 100%;
@@ -506,6 +510,9 @@
 
 @media only screen and (min-width: 1100px) {
 	/*LAPTOPS*/
+	#theGrid {
+		min-height: 900px;
+	}
 	#theHeader h1 {
 		font-weight: bold;
 		font-size: 35px;
@@ -541,7 +548,6 @@
 		margin-top: 71px;
 	}
 	.openedForm {
-		background-color: rgba(0, 0, 0, 0.774);
 		height: 85px; /*opened Form*/
 		position: absolute;
 	}
@@ -621,7 +627,6 @@
 		margin: auto;
 		margin-top: 20px;
 		border-radius: 6px;
-		background-color: rgb(54, 27, 104);
 		position: relative;
 		z-index: 0;
 		float: left;
@@ -642,8 +647,9 @@
 		padding-top: 10px;
 		text-align: center;
 		font-size: 11px;
-		text-decoration: overline underline;
 		color: white;
+		opacity: .6 !important;
+		text-decoration: none;
 	}
 	.bookFooters {
 		width: 100%;
@@ -674,11 +680,10 @@
 }
 #theGrid {
 	width: 100%;
-	height: 1900px;
-	background-color: purple;
+	background-color: rgb(196, 195, 195);
 }
 #theHeader {
-	background-color: teal;
+	background-color: rgb(196, 195, 195);
 	height: 120px;
 	width: 100%;
 	position: sticky;
@@ -688,6 +693,12 @@
 	position: fixed;
 	top: 0;
 	width: 100%;
+}
+.books {
+	background-color: rgb(2, 53, 110);
+}
+.openedForm {
+	background-color: rgba(0, 0, 0, 0.87);
 }
 @keyframes addButton {
 	0% {
