--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@
 	box-sizing: border-box;
 	font-family: 'Adamina', serif;
 }
-@media only screen and (max-width: 680px) {
+@media only screen and (max-width: 680px) and (orientation: portrait) {
 	/*PHONES*/
 	#theHeader h1 {
 		font-weight: bold;
@@ -13,7 +13,7 @@
 		background-color: #e63936;
 		border: none;
 		border-radius: 4px;
-		width: 270px;
+		width: 290px;
 		color: white;
 		font-weight: bold;
 		font-size: 30px;
@@ -23,7 +23,7 @@
 		animation-iteration-count: infinite;
 
 		/*controls button positioning*/
-		transform: translate(-50%, -30%);
+		transform: translate(-51%, -30%);
 		top: 55%;
 		left: 50%;
 		position: absolute;
@@ -165,7 +165,169 @@
 		transition-duration: 1s;
 	}
 }
+@media only screen and (max-width: 680px) and (orientation: landscape) {
+	/*PHONES*/
+	#theHeader h1 {
+		font-weight: bold;
+		font-size: 35px;
+		text-align: center;
+	}
+	#addBtn {
+		background-color: #e63936;
+		border: none;
+		border-radius: 4px;
+		width: 290px;
+		color: white;
+		font-weight: bold;
+		font-size: 30px;
+		text-transform: uppercase;
+		animation-name: addButton;
+		animation-duration: 10s;
+		animation-iteration-count: infinite;
 
+		/*controls button positioning*/
+		transform: translate(-51%, -30%);
+		top: 55%;
+		left: 50%;
+		position: absolute;
+		/*end of button positioning*/
+	}
+	/*FORM STYLING*/
+	#theForm {
+		width: 100%;
+		margin-top: 71px;
+	}
+	.openedForm {
+		background-color: rgba(0, 0, 0, 0.774);
+		height: 380px; /*opened Form*/
+		position: absolute;
+	}
+	.closedForm {
+		height: 0px;
+	}
+	form div {
+		height: 80px;
+		float: left;
+	}
+	#theAuthor {
+		/*TESTING COLORS WITH INPUTS*/
+		width: 100%;
+	}
+	#theTitle {
+		/*TESTING COLORS WITH INPUTS*/
+		width: 100%;
+	}
+	#theYear {
+		/*TESTING COLORS WITH INPUTS*/
+		width: 50%;
+	}
+	#thePages {
+		/*TESTING COLORS WITH INPUTS*/
+		width: 50%;
+	}
+	#theRead {
+		/*TESTING COLORS WITH INPUTS*/
+		float: left;
+		width: 100%;
+	}
+	#theForm label {
+		color: white;
+		width: 100%;
+		display: block;
+		font-size: 12px;
+		font-weight: bold;
+		margin-left: 10px;
+	}
+	#theAuthor input,
+	#theTitle input,
+	#theRead select {
+		width: 95% !important;
+		background-color: white;
+	}
+	#theForm input,
+	#theRead select {
+		width: 90%;
+		margin-top: 3px;
+		padding: 10px;
+		border-radius: 4px;
+		border: none;
+		margin-left: 10px;
+	}
+
+	#submitDiv {
+		width: 100%;
+		height: 50px;
+	}
+	#submitBtn {
+		background-color: orangered;
+		color: white;
+		font-weight: bold;
+		border: none;
+		border-radius: 4px;
+		font-size: 20px;
+		width: 60%;
+		transform: translate(35%, 35%);
+		text-transform: uppercase;
+		animation-name: addButton;
+		animation-duration: 8s;
+		animation-iteration-count: infinite;
+	}
+	.books {
+		width: 300px;
+		height: 226px;
+		margin: auto;
+		margin-top: 20px;
+		border-radius: 6px;
+		position: relative;
+		z-index: 0;
+	}
+	.bookTitles {
+		padding-top: 40px;
+		text-align: center;
+		font-size: 40px;
+		font-weight: bolder;
+		color: white;
+	}
+	.bookAuthors {
+		text-align: center;
+		font-size: 15px;
+		color: white;
+	}
+	.bookPages {
+		padding-top: 10px;
+		text-align: center;
+		font-size: 11px;
+		color: white;
+		opacity: .6 !important;
+		text-decoration: none;
+	}
+	.bookFooters {
+		width: 100%;
+		height: 30px;
+		top: 0;
+		transform: translateY(600%);
+		position: absolute;
+	}
+	.bookFooters h4 {
+		height: 100%;
+		width: 80%;
+		float: left;
+		padding-left: 10px;
+		color: white;
+	}
+	.bookfooters i {
+		display: block;
+		height: 100%;
+	}
+	.material-icons {
+		color: white !important;
+		opacity: .4 !important;
+	}
+	.material-icons:hover {
+		opacity: 1 !important;
+		transition-duration: 1s;
+	}
+}
 @media only screen and (min-width: 681px) and (orientation: portrait) {
 	/*TABLETS*/
 	#theGrid {
