--- a/css/main.css
+++ b/css/main.css
@@ -167,6 +167,10 @@
 }
 @media only screen and (max-width: 680px) and (orientation: landscape) {
 	/*PHONES*/
+	#theGrid {
+		display: grid;
+		grid-template-columns: 1 fr;
+	}
 	#theHeader h1 {
 		font-weight: bold;
 		font-size: 35px;
